--- a/src/app/home/search/search.component.html
+++ b/src/app/home/search/search.component.html
@@ -1,8 +1,22 @@
 <div class="container">
+  <div class="search">
     <label>Search: </label>
-    <input class="input-lg form-control well" type="search" #searchInput placeholder="Search...">
-    <button type="button" class="clear-filter-button" (click)="clearSearchResults()">X</button>
+    <input
+      class="input-lg form-control well"
+      type="search"
+      #searchInput
+      placeholder="Search..."
+    />
+  </div>
 
-    <app-result-list *ngIf="searchResult" [searchResult]="searchResult" (onSelectedMovie)="onMovieSelected($event)"></app-result-list>
-    <!-- <app-detail [selectedMovie]="selectedMovie"></app-detail> -->
+  <app-result-list
+    *ngIf="searchResult?.length; else noResults"
+    [searchResult]="searchResult"
+    (onSelectedMovie)="onMovieSelected($event)"
+  ></app-result-list>
+  <!-- <app-detail [selectedMovie]="selectedMovie"></app-detail> -->
+
+  <ng-template #noResults>
+    <img *ngIf="searchCriteriaLength > 0" src="assets/NoSearchResult.gif" />
+  </ng-template>
 </div>
