Added menu and favorites bacis component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,3 @@
 <app-search (isSearchResult)="onIsSearchResult($event)"></app-search>
 <app-popular-movies *ngIf="!isSearchResult"></app-popular-movies>
+<app-favorites></app-favorites>
