--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,2 @@
-<app-search (isSearchResult)="onIsSearchResult($event)"></app-search>
-<app-popular-movies *ngIf="!isSearchResult"></app-popular-movies>
+<app-popular-movies></app-popular-movies>
 <app-favorites></app-favorites>
