--- a/src/app/search/result-list/result-list.component.scss
+++ b/src/app/search/result-list/result-list.component.scss
@@ -1,7 +1,7 @@
 .grid-container {
     display: grid;
     gap: 25px 10px;
-    grid-template-columns: auto auto auto auto auto;
+    grid-template-columns: repeat( auto-fit, minmax(250px, 1fr) );
 }
 
 .result-item {
