Added new components

--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -5,7 +5,7 @@
     <a mat-list-item routerLink="/search" (click)="onSidenavClose()">
         <mat-icon>search</mat-icon> <span class="nav-caption">Search</span>   
     </a>
-    <a mat-list-item routerLink="#" (click)="onSidenavClose()">
-        <mat-icon>movie</mat-icon><span class="nav-caption">My Movies</span>
+    <a mat-list-item routerLink="/my-movies" (click)="onSidenavClose()">
+        <mat-icon>favorite</mat-icon><span class="nav-caption">Favorites</span>
     </a>
   </mat-nav-list>
