--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -13,7 +13,7 @@
         <a routerLink="/search">Search</a>
       </li>
       <li>
-        <a routerLink="/my-movies">My movies</a>
+        <a routerLink="/favorites">Favorites</a>
       </li>
     </ul>
   </div>
