Added movie details dialog panel

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -15,7 +15,7 @@
     (onSelectedMovie)="onMovieSelected($event)"
   ></app-result-list>
   
-  <app-detail [selectedMovie]="selectedMovie"></app-detail>
+  <!-- <app-detail [selectedMovie]="selectedMovie"></app-detail> -->
 
   <ng-template #noResults>
     <img *ngIf="searchCriteriaLength > 0" src="assets/NoSearchResult.gif" />
