--- a/src/app/navigation/header/header.component.scss
+++ b/src/app/navigation/header/header.component.scss
@@ -22,3 +22,12 @@ mat-toolbar{
         border-radius: 0px;
     }
 }
+
+.nav-item {
+    display: flex;
+}
+
+mat-icon {
+    padding-top: 3px;
+    padding-right: 2px;
+}
